--- a/index.html
+++ b/index.html
@@ -6,11 +6,29 @@
     <title>2CUST CREATIVE RECYCLE CENTRE</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="shortcut icon" href="./img/label.svg" type="image/x-icon">
+    <!-- <script src="js/script.js"></script> -->
+    <script type="importmap">
+        {
+          "imports": {
+            "three": "https://unpkg.com/three@0.139.0/build/three.module.js",
+            "OrbitControls": "https://unpkg.com/three@0.139.0/examples/jsm/controls/OrbitControls.js",
+            "GLTFLoader": "https://unpkg.com/three@0.139.0/examples/jsm/loaders/GLTFLoader.js",
+            "RectAreaLightUniformsLib": "https://unpkg.com/three@0.139.0/examples/jsm/lights/RectAreaLightUniformsLib.js"
+          }
+        }
+      </script>
+      <script src="js/office-model.js" type="module"></script>
 
 </head>
 <body>
-    <script src="script.js"></script>
-    <h1> Здесь все будет!!!</h1>
+    <div id="logo-container">
+        <img src="img/logo.svg" alt="Логотип">
+        <div class="logo-caption">ПУНКТ КРЕАТИВНОЙ ПЕРЕРАБОТКИ</div>
+    </div>
+    
+
+    <!-- Контейнер для рендера -->
+  <div class="three_office"></div>
 
 </body>
 </html>
