--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <img src="img/cross.svg" alt="Закрыть">
           </span>
         </div>
-        <img src="img/кпрендер4.png" alt="пупуппу" width="360px">
+        <img src="img/001.gif" alt="" width="300px">
       </div>
 
       <div class="gif_group">
@@ -71,7 +71,7 @@
             <img src="img/cross.svg" alt="Закрыть">
           </span>
         </div>
-        <img src="img/кпрендер4.png" alt="пупуппу" width="280px">
+        <img src="img/002.gif" alt="" width="280px">
       </div>
     
 
@@ -82,7 +82,7 @@
             <img src="img/cross.svg" alt="Закрыть">
           </span>
         </div>
-        <img src="img/кпрендер4.png" alt="пупуппу" width="200px">
+        <img src="img/003.gif" alt="" width="240px">
       </div>
 
       <div class="gif_group">
@@ -92,7 +92,7 @@
             <img src="img/cross.svg" alt="Закрыть">
           </span>
         </div>
-        <img src="img/кпрендер4.png" alt="пупуппу" width="160px">
+        <img src="img/004.gif" alt="" width="200px">
       </div>
 
       <div class="gif_group">
@@ -102,7 +102,7 @@
             <img src="img/cross.svg" alt="Закрыть">
           </span>
         </div>
-        <img src="img/кпрендер4.png" alt="пупуппу" width="250px">
+        <img src="img/005.gif" alt="" width="250px">
       </div>
     </section>  
 
