--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
       <div class="blur_text">
         <img src="img/blur_text.svg" alt="о нас">
       </div>
+
+      <div class="blur_text_pad">
+        <img src="img/blur_text_pad.svg" alt="о нас">
+      </div>
+
+      <div class="blur_text_phone">
+        <img src="img/blur_text_phone.svg" alt="о нас">
+      </div>
+
+
       <div class="gif_group">
         <div class="gif_header">
           <p class="gif_title">001.MP4</p>
