--- a/index.html
+++ b/index.html
@@ -39,11 +39,14 @@
           <img src="img/logo.svg" alt="Логотип">
           <div class="logo-caption">ПУНКТ КРЕАТИВНОЙ ПЕРЕРАБОТКИ</div>
       </div>
+
+
       <div class="menu">
       <button id="recycle_button">РЕСАЙКЛ</button>
       <button id="upcycle_button">АПСАЙКЛ</button>
       <button id="customization_button">КАСТОМИЗАЦИЯ</button>
       </div>
+
       <!-- Контейнер для рендера -->
       <div class="three_office"></div>
 
@@ -389,7 +392,7 @@
   <section class="footer">
     <div class="hse_logo"><img src="./img/hse_logo.svg" alt=""></div>
     <!-- <div class="recycle_sign"><img src="./img/recycle_sign.svg" alt=""></div> -->
-    <h3>Нина Волощенко <br> б24дз10 <br> Куратор: <br> Даша Зародина</h3>
+    <h3>НИНА ВОЛОЩЕНКО <br> Б24ДЗ10 <br> КУРАТОР <br> ДАША ЗАРОДИНА</h3>
   </section>
 
 </body>
